--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fontsource/montserrat": "^5.2.8",
     "@fontsource/roboto": "^5.2.8",
     "@tailwindcss/vite": "^4.1.14",
